--- a/.grype.yaml
+++ b/.grype.yaml
@@ -1,4 +1,8 @@
-ignore: []
+ignore:
+  - vulnerability: CVE-2026-22184
+  - vulnerability: CVE-2025-60876
+  - vulnerability: GHSA-5j98-mcp5-4vw2
+  - vulnerability: GHSA-8qq5-rm4j-mr97
 
 output:
   - "table"
